--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <description>This library allows Spring applications to categorize and map beans for straightforward retrieval based on service requirements, with added capabilities for manual registration of beans not managed by the Spring container</description>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <spring.boot.version>3.2.5</spring.boot.version>
     </properties>
 
@@ -55,4 +55,11 @@
         </dependency>
 
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/olufemithompson/multibeanconfig</url>
+        </repository>
+    </distributionManagement>
+
 </project>
